Sequence comparison functions completed and GPU-accelerated.

--- a/.gitignore
+++ b/.gitignore
@@ -131,4 +131,7 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-Unity_VR_Template/Library
+Unity_VR_Template/Library/
+Unity_VR_Template/UserSettings/
+Unity_VR_Template/Assets/XR/
+Unity_VR_Template/Temp
