--- a/Unity_VR_Template/Assembly-CSharp.csproj
+++ b/Unity_VR_Template/Assembly-CSharp.csproj
@@ -86,6 +86,7 @@
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\SkewTextExample.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\WarpTextExample.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\ShaderPropAnimator.cs" />
+    <Compile Include="Assets\Scripts\UI\GestureRecognitionUI.cs" />
     <Compile Include="Assets\Scripts\UI\JointDataUI.cs" />
     <Compile Include="Assets\Scripts\Utilities\JointDataGather.cs" />
     <Compile Include="Assets\TextMesh Pro\Examples &amp; Extras\Scripts\TMP_TextInfoDebugTool.cs" />
