Gesture System Manager modularized as persistent module across scenes for easy API access by respective scene managers. Task flow scene transitions added, with Gesture Practice working, Game configured (but not fully built out), and Gesture Recording not supported yet.

--- a/Unity_Client/Assets/StreamingAssets/config.json
+++ b/Unity_Client/Assets/StreamingAssets/config.json
@@ -1,4 +1,9 @@
 {
 	"host": "127.0.0.1",
-	"port": "8000"
+	"port": "8000",
+	"defaultGestures": {
+		"Right Jab": "CastFireball",
+		"Left Jab": "CastFireball",
+		"Table Bang": "CastFireball"
+	}
 }
