Visualization added to practice mode.

--- a/GestureBuilder/requirements.txt
+++ b/GestureBuilder/requirements.txt
@@ -1,13 +1,21 @@
 # ML
 torch
-sklearn
+scikit-learn
 
 # Data
 pandas
 numpy
 
+# Server
+uvicorn[standard]
+fastapi
+
+# Typing
+pydantic
+
 # File I/O
 pathlib
+PyYAML
 
 # Visualization
 plotly
