--- a/GestureBuilder/pyproject.toml
+++ b/GestureBuilder/pyproject.toml
@@ -13,9 +13,10 @@ readme = "README.md"
 requires-python = ">=3.8"
 dependencies = [
   "torch",
-  "sklearn",
+  "scikit-learn",
   "numpy>=1.20.0",
   "pandas>=1.3.0",
+  "matplotlib",
   "plotly"
 ]
 
