--- a/Unity_Client/Assets/StreamingAssets/config.json
+++ b/Unity_Client/Assets/StreamingAssets/config.json
@@ -2,8 +2,10 @@
 	"host": "127.0.0.1",
 	"port": "8000",
 	"defaultGestures": {
-		"Right Jab": "CastFireball",
-		"Left Jab": "CastFireball",
-		"Table Bang": "CastFireball"
+		"Cast Fireball": "CastFireball",
+		"Cast Ice": "CastIce",
+		"Cast Lightning": "CastLightning",
+		"Show Teleport": "ShowTeleport",
+		"Cast Teleport": "CastTeleport"
 	}
 }
