Sequence comparison changes

--- a/GestureBuilder/server/config/config.yaml
+++ b/GestureBuilder/server/config/config.yaml
@@ -6,28 +6,28 @@ paths:
   
 
 gesture_template_paths:
-  # - name: "Cast Lightning"
-  #   path: "live_recordings-Chitsein-Cast Lightning 1.csv"
-  # - name: "Cast Lightning"
-  #   path: "live_recordings-Chitsein-Cast Lightning 2.csv"
-  # - name: "Cast Ice"
-  #   path: "live_recordings-Chitsein-Cast Ice 1.csv"
-  # - name: "Cast Ice"
-  #   path: "live_recordings-Chitsein-Cast Ice 2.csv"
-  # - name: "Show Teleport"
-  #   path: "live_recordings-Chitsein-Show Teleport 1.csv"
-  # - name: "Show Teleport"
-  #   path: "live_recordings-Chitsein-Show Teleport 2.csv"
+  - name: "Cast Lightning"
+    path: "live_recordings-Chitsein-Cast Lightning 1.csv"
+  - name: "Cast Lightning"
+    path: "live_recordings-Chitsein-Cast Lightning 2.csv"
+  - name: "Cast Ice"
+    path: "live_recordings-Chitsein-Cast Ice 1.csv"
+  - name: "Cast Ice"
+    path: "live_recordings-Chitsein-Cast Ice 2.csv"
+  - name: "Show Teleport"
+    path: "live_recordings-Chitsein-Show Teleport 1.csv"
+  - name: "Show Teleport"
+    path: "live_recordings-Chitsein-Show Teleport 2.csv"
   - name: "Cast Teleport"
     path: "live_recordings-Chitsein-Cast Teleport 1.csv"
   - name: "Cast Teleport"
     path: "live_recordings-Chitsein-Cast Teleport 2.csv"
-  # - name: "Cast Fireball"
-  #   path: "live_recordings-Evan-Cast Fireball 1.csv"
-  # - name: "Cast Fireball"
-  #   path: "live_recordings-Evan-Cast Fireball 2.csv"
-  # - name: "Cast Fireball"
-  #   path: "live_recordings-Chitsein-Cast Fireball 2.csv"
+  - name: "Cast Fireball"
+    path: "live_recordings-Evan-Cast Fireball 1.csv"
+  - name: "Cast Fireball"
+    path: "live_recordings-Evan-Cast Fireball 2.csv"
+  - name: "Cast Fireball"
+    path: "live_recordings-Chitsein-Cast Fireball 2.csv"
 
 gesture_settings:
   BUFFER_MAX_LEN: 40
