Tweaked for custom gesture recognition

--- a/.gitignore
+++ b/.gitignore
@@ -136,6 +136,8 @@ Unity_VR_Template/UserSettings/
 Unity_VR_Template/Assets/XR/
 Unity_VR_Template/Temp
 
+diagnostic_output.txt
+
 # --- Unity ---
 [Ll]ibrary/
 [Tt]emp/
