--- a/GestureBuilder/server/config/config.yaml
+++ b/GestureBuilder/server/config/config.yaml
@@ -2,44 +2,56 @@ paths:
   data_folder: "../server/database/raw_data/"
   output_folder: "../output"
   input_VQVAE_model: "vqvae_hand_model.pt"
-  gesture_template_json: "./database/stored_gesture_templates-Test1.json"
+  gesture_template_json: "./database/stored_gesture_templates-Syed.json"
   
 
 gesture_template_paths:
-  # - name: "Cast Fireball"
-  #   path: "live_recordings-Evan-Cast Fireball 1.csv"
-  # - name: "Cast Fireball"
-  #   path: "live_recordings-Chitsein-Cast Fireball 1.csv"
-  # - name: "Cast Fireball"
-  #   path: "live_recordings-Chitsein-Cast Fireball 2.csv"
+  - name: "Cast Fireball"
+    path: "live_recordings-Jack-Cast Fireball 1.csv"
+  - name: "Cast Fireball"
+    path: "live_recordings-Evan-Cast Fireball 1.csv"
+  - name: "Cast Fireball"
+    path: "live_recordings-Chitsein-Cast Fireball 1.csv"
+  - name: "Cast Fireball"
+    path: "live_recordings-Chitsein-Cast Fireball 2.csv"
 
-  # - name: "Cast Lightning"
-  #   path: "live_recordings-Evan-Cast Lightning 1-Chopped.csv"
+  - name: "Cast Lightning"
+    path: "live_recordings-Evan-Cast Lightning 1-Chopped.csv"
   - name: "Cast Lightning"
     path: "live_recordings-Evan-Cast Lightning 2-Chopped.csv"
   - name: "Cast Lightning"
     path: "live_recordings-Chitsein-Cast Lightning 1-Chopped.csv"
 
-  # - name: "Cast Ice"
-  #   path: "live_recordings-Evan-Cast Ice 1.csv"
-  # - name: "Cast Ice"
-  #   path: "live_recordings-Chitsein-Cast Ice 1.csv"
-  # - name: "Cast Ice"
-  #   path: "live_recordings-Chitsein-Cast Ice 2.csv"
+  - name: "Cast Ice"
+    path: "live_recordings-Evan-Cast Ice 1.csv"
+  - name: "Cast Ice"
+    path: "live_recordings-Evan-Cast Ice 2.csv"
+  - name: "Cast Ice"
+    path: "live_recordings-Chitsein-Cast Ice 1.csv"
+  - name: "Cast Ice"
+    path: "live_recordings-Chitsein-Cast Ice 2.csv"
+  - name: "Cast Ice"
+    path: "live_recordings-Chitsein-Cast Ice 3.csv"
 
   - name: "Show Teleport"
     path: "live_recordings-Evan-Show Teleport 1-Chopped.csv"
   - name: "Show Teleport"
     path: "live_recordings-Evan-Show Teleport 2.csv"
+  # - name: "Show Teleport"
+  #   path: "live_recordings-Evan-Show Teleport 3.csv"
   - name: "Show Teleport"
     path: "live_recordings-Chitsein-Show Teleport 1-Chopped.csv"
+  # - name: "Show Teleport"
+  #   path: "live_recordings-Chitsein-Show Teleport 2.csv"
 
-  # - name: "Cast Teleport"
-  #   path: "live_recordings-Evan-Cast Teleport 1.csv"
-  # - name: "Cast Teleport"
-  #   path: "live_recordings-Chitsein-Cast Teleport 1.csv"
-  # - name: "Cast Teleport"
-  #   path: "live_recordings-Chitsein-Cast Teleport 2.csv"
+  - name: "Cast Teleport"
+    path: "live_recordings-Evan-Cast Teleport 1.csv"
+  - name: "Cast Teleport"
+    path: "live_recordings-Evan-Cast Teleport 2.csv"
+  - name: "Cast Teleport"
+    path: "live_recordings-Chitsein-Cast Teleport 1.csv"
+  - name: "Cast Teleport"
+    path: "live_recordings-Chitsein-Cast Teleport 2.csv"
 
 gesture_settings:
   BUFFER_MAX_LEN: 30
