--- a/GestureBuilder/server/config/config.yaml
+++ b/GestureBuilder/server/config/config.yaml
@@ -1,57 +1,74 @@
 paths:
-  data_folder: "../server/database/raw_data/"
+  data_folder: "../server/database/participant_data/"
   output_folder: "../output"
   input_VQVAE_model: "vqvae_hand_model.pt"
-  gesture_template_json: "./database/stored_gesture_templates-Syed.json"
+  # gesture_template_json: "../server/database/stored_gesture_templates-Participant2.json"
   
 
 gesture_template_paths:
   - name: "Cast Fireball"
-    path: "live_recordings-Jack-Cast Fireball 1.csv"
-  - name: "Cast Fireball"
-    path: "live_recordings-Evan-Cast Fireball 1.csv"
-  - name: "Cast Fireball"
-    path: "live_recordings-Chitsein-Cast Fireball 1.csv"
-  - name: "Cast Fireball"
-    path: "live_recordings-Chitsein-Cast Fireball 2.csv"
+    path: "live_recordings-Syed-Cast Fireball 1.csv"
 
-  - name: "Cast Lightning"
-    path: "live_recordings-Evan-Cast Lightning 1-Chopped.csv"
-  - name: "Cast Lightning"
-    path: "live_recordings-Evan-Cast Lightning 2-Chopped.csv"
-  - name: "Cast Lightning"
-    path: "live_recordings-Chitsein-Cast Lightning 1-Chopped.csv"
-
-  - name: "Cast Ice"
-    path: "live_recordings-Evan-Cast Ice 1.csv"
-  - name: "Cast Ice"
-    path: "live_recordings-Evan-Cast Ice 2.csv"
-  - name: "Cast Ice"
-    path: "live_recordings-Chitsein-Cast Ice 1.csv"
-  - name: "Cast Ice"
-    path: "live_recordings-Chitsein-Cast Ice 2.csv"
-  - name: "Cast Ice"
-    path: "live_recordings-Chitsein-Cast Ice 3.csv"
+  - name: "Cast Teleport"
+    path: "live_recordings-Syed-Cast Teleport 1.csv"
+  - name: "Cast Teleport"
+    path: "live_recordings-Syed-Cast Teleport 3.csv"
 
   - name: "Show Teleport"
-    path: "live_recordings-Evan-Show Teleport 1-Chopped.csv"
-  - name: "Show Teleport"
-    path: "live_recordings-Evan-Show Teleport 2.csv"
+    path: "live_recordings-Syed-Show Teleport 10.csv"
   # - name: "Show Teleport"
-  #   path: "live_recordings-Evan-Show Teleport 3.csv"
-  - name: "Show Teleport"
-    path: "live_recordings-Chitsein-Show Teleport 1-Chopped.csv"
+  #   path: "live_recordings-Syed-Show Teleport 3.csv"
   # - name: "Show Teleport"
-  #   path: "live_recordings-Chitsein-Show Teleport 2.csv"
+  #   path: "live_recordings-Syed-Show Teleport 4.csv"
+  # - name: "Show Teleport"
+  #   path: "live_recordings-Syed-Show Teleport 6.csv"
+  # - name: "Show Teleport"
+  #   path: "live_recordings-Syed-Show Teleport 8.csv"
+  # - name: "Show Teleport"
+  #   path: "live_recordings-Syed-Show Teleport 9.csv"
 
-  - name: "Cast Teleport"
-    path: "live_recordings-Evan-Cast Teleport 1.csv"
-  - name: "Cast Teleport"
-    path: "live_recordings-Evan-Cast Teleport 2.csv"
-  - name: "Cast Teleport"
-    path: "live_recordings-Chitsein-Cast Teleport 1.csv"
-  - name: "Cast Teleport"
-    path: "live_recordings-Chitsein-Cast Teleport 2.csv"
+  # - name: "Cast Fireball"
+  #   path: "live_recordings-Jack-Cast Fireball 1.csv"
+  # - name: "Cast Fireball"
+  #   path: "live_recordings-Evan-Cast Fireball 1.csv"
+  # - name: "Cast Fireball"
+  #   path: "live_recordings-Chitsein-Cast Fireball 1.csv"
+  # - name: "Cast Fireball"
+  #   path: "live_recordings-Chitsein-Cast Fireball 2.csv"
+
+  # - name: "Cast Lightning"
+  #   path: "live_recordings-Evan-Cast Lightning 1-Chopped.csv"
+  # - name: "Cast Lightning"
+  #   path: "live_recordings-Evan-Cast Lightning 2-Chopped.csv"
+  # - name: "Cast Lightning"
+  #   path: "live_recordings-Chitsein-Cast Lightning 1-Chopped.csv"
+
+  # - name: "Cast Ice"
+  #   path: "live_recordings-Evan-Cast Ice 1.csv"
+  # - name: "Cast Ice"
+  #   path: "live_recordings-Evan-Cast Ice 2.csv"
+  # - name: "Cast Ice"
+  #   path: "live_recordings-Chitsein-Cast Ice 1.csv"
+  # - name: "Cast Ice"
+  #   path: "live_recordings-Chitsein-Cast Ice 2.csv"
+  # - name: "Cast Ice"
+  #   path: "live_recordings-Chitsein-Cast Ice 3.csv"
+
+  # - name: "Show Teleport"
+  #   path: "live_recordings-Evan-Show Teleport 1-Chopped.csv"
+  # - name: "Show Teleport"
+  #   path: "live_recordings-Evan-Show Teleport 2.csv"
+  # - name: "Show Teleport"
+  #   path: "live_recordings-Chitsein-Show Teleport 1-Chopped.csv"
+
+  # - name: "Cast Teleport"
+  #   path: "live_recordings-Evan-Cast Teleport 1.csv"
+  # - name: "Cast Teleport"
+  #   path: "live_recordings-Evan-Cast Teleport 2.csv"
+  # - name: "Cast Teleport"
+  #   path: "live_recordings-Chitsein-Cast Teleport 1.csv"
+  # - name: "Cast Teleport"
+  #   path: "live_recordings-Chitsein-Cast Teleport 2.csv"
 
 gesture_settings:
   BUFFER_MAX_LEN: 30
