--- a/Unity_Client/Assets/StreamingAssets/config.json
+++ b/Unity_Client/Assets/StreamingAssets/config.json
@@ -1,7 +1,7 @@
 {
 	"host": "127.0.0.1",
 	"port": "8000",
-	"participant": "Syed",
+	"participant": "PrateekMishra",
 	"defaultGestures": {
 		"Cast Fireball": "CastFireball",
 		"Cast Ice": "CastIce",
